--- a/markup/components/model-list/model-list-search-result.pug
+++ b/markup/components/model-list/model-list-search-result.pug
@@ -30,7 +30,7 @@ mixin model-list()
                 +e.header-col.hide-mob
                     +button(href='#' data-popup-id='#model-map' data-action='toggle')._color_white._bg_darkGrey._uppercase.js-toggle-popup View on map
 
-            +grid-masonry(4, '.model-preview').js-model-preview-grid
+            +grid-masonry({ desktop: 4, laptop: 3, tablet: 2, mobile: 1}).js-model-preview-grid
                 +model-preview([7, 7, 7], 'Megan', 20, 325, true)
                     +badges._top
                         +badges-item._new._skew
