--- a/markup/components/navbar/navbar.styl
+++ b/markup/components/navbar/navbar.styl
@@ -184,6 +184,9 @@
         &_currency
             fill: mainColor
 
+        &_list-view
+            fill: #fff
+
     &__heading
         display: block
         color darkGreyColor
