--- a/markup/components/profile-photo-popup/profile-photo-popup.styl
+++ b/markup/components/profile-photo-popup/profile-photo-popup.styl
@@ -8,6 +8,9 @@
     overflow: hidden
     position: relative
 
+    .popup__close
+        z-index: 100
+
     +below(1024px)
         flex-direction: row
         justify-content: center
