--- a/markup/components/photo-tape/photo-tape.styl
+++ b/markup/components/photo-tape/photo-tape.styl
@@ -30,6 +30,10 @@ photoTapeItemWidthMobile = 60px
         text-decoration: none
         font-size: 0
 
+        &:hover
+            & ^[0]__photo
+                opacity: .5
+
     &__photo
         width: 100%
         height: auto
@@ -84,6 +88,3 @@ photoTapeItemWidthMobile = 60px
 
         +below(1300px)
             display: none
-
-    .model-info-popup
-        display: none
