--- a/markup/components/model-info-popup/model-info-popup.styl
+++ b/markup/components/model-info-popup/model-info-popup.styl
@@ -5,12 +5,20 @@ modelInfoPopupMediumXPadding = 18px
     position: absolute;
     top: 100%
     left: 50%;
-    transform: translate(-50%, -4px)
-    display: none
+    transform: translate(-50%, 100px)
+    display: block
     width: 258px
     background-color: #fff
     z-index: 100
     box-sizing: border-box
+    box-shadow 0 10px 40px rgba(29, 29, 29, .1)
+    opacity: 0
+    pointer-events none
+    transition(opacity, transform)
+
+    &.active
+        transform: translate(-50%, -4px)
+        opacity: 1;
 
     &::before
         content: ''
@@ -24,6 +32,8 @@ modelInfoPopupMediumXPadding = 18px
 
     &__header
         border-bottom: 1px solid borderColor
+        border-left: 0
+        border-right: 0
 
     &__rating
         padding: 23px modelInfoPopupBigXPadding 22px;
