--- a/markup/components/photo-tape/photo-tape.pug
+++ b/markup/components/photo-tape/photo-tape.pug
@@ -13,7 +13,7 @@ mixin photo-tape()
                 - for (var i = 0; i < 2; i++)
                     - for (var j = 1; j <= 15; j++)
                         +e.LI.item.swiper-slide
-                            +e.DIV.link
+                            +e.A(href='#').link
                                 +e.IMG(src=`%=static=%img/content/photo-tape/${j}.jpg` alt=`Model ${j}`).photo
 
                             +model-info-popup.__popup
