--- a/markup/components/navbar/navbar.styl
+++ b/markup/components/navbar/navbar.styl
@@ -39,6 +39,8 @@
         display: flex
         min-width: 149px
         height: 100%
+        box-shadow 0 10px 40px rgba(29, 29, 29, 0)
+        transition(border-color, box-shadow)
 
         &_filter
             .header__filter-close
@@ -102,8 +104,15 @@
             min-width: initial
             flex: 1 0 60px
 
-        &:not(:last-child)
-            border-right: 1px solid borderColor
+        &:not(:first-child)
+            border-left: 1px solid borderColor
+
+        &:hover, &.active
+            border-color transparent
+            box-shadow 0 10px 40px rgba(29, 29, 29, .1)
+
+            + .navbar__item
+                border-color transparent
 
     &__link
         display: flex
