--- a/markup/components/header/header.pug
+++ b/markup/components/header/header.pug
@@ -35,7 +35,7 @@ mixin header(dark, isGuest)
                         +navbar-heading Agency's
                         +navbar-description 2154
 
-                +navbar-item._flexible
+                +navbar-item._flexible._no_hover
                     +search-bar(class=!!dark ? '_dark' : '')
 
                 +navbar-item(data-popup-id='#select-city' data-action='toggle')._city._dropdown.js-toggle-popup
