--- a/markup/components/navbar/navbar.styl
+++ b/markup/components/navbar/navbar.styl
@@ -107,7 +107,7 @@
         &:not(:first-child)
             border-left: 1px solid borderColor
 
-        &:hover, &.active
+        &:hover:not(.navbar__item_no_hover), &.active
             border-color transparent
             box-shadow 0 10px 40px rgba(29, 29, 29, .1)
 
