--- a/markup/components/header/header.styl
+++ b/markup/components/header/header.styl
@@ -60,9 +60,11 @@
                             display: none
 
               .search-bar__close
-                margin: 0
                 border: 0
                 border-left: 1px solid borderColor
+
+              .search-bar_extended .search-bar__close
+                margin: 0
 
             .navbar
                 z-index: 150
@@ -146,6 +148,9 @@
         width: 100%
         height: 88px
         z-index: 210
+
+        +above(1024px)
+            display: none !important
 
     &__navbar_mobile
         display: none
