--- a/markup/components/search-bar/search-bar.styl
+++ b/markup/components/search-bar/search-bar.styl
@@ -1,4 +1,5 @@
 .search-bar
+    position: relative
     display: flex
     align-items: center
     width: 100%
@@ -15,6 +16,9 @@
             +below(1024px)
                 display: none
 
+        & > ^[0]__placeholder span
+            opacity .4
+
     &__input
         flex: 1
         height: 100%
@@ -25,8 +29,24 @@
         min-width: 0
 
         &::placeholder
-            opacity 1
-            color darkGreyColor
+            opacity 0
+
+    &__placeholder
+        position: absolute
+        top: 50%
+        left: 0
+        padding-left: 24px
+        padding-right: 100px
+        font-size: 16px
+        color: darkGreyColor
+        transform: translateY(-50%)
+        pointer-events: none
+        ellipsis(100%)
+
+        span
+            opacity: 0
+            color: darkGreyColor
+            transition(opacity)
 
     &__button
         display: block
