--- a/markup/components/city-suggest/city-suggest.styl
+++ b/markup/components/city-suggest/city-suggest.styl
@@ -4,6 +4,7 @@
     transform: translate3d(0, 100px, 0)
     pointer-events none
     transition(opacity, transform)
+    box-shadow 0 10px 40px 0 rgba(29, 29, 29, .1)
 
     &.active
         opacity: 1
