--- a/markup/components/header/header.styl
+++ b/markup/components/header/header.styl
@@ -13,6 +13,13 @@
         position: relative
         z-index: 150
 
+        .navbar__item_credits .navbar__dropdown
+            .navbar__items
+                justify-content: center
+
+            .navbar__link
+                padding: 0 36px
+
     &.fixed
         position: fixed
         top: 0
@@ -99,6 +106,8 @@
 
                 &__item_credits
                     min-width: initial
+
+
 
                     &:hover
                         .navbar__link_dropdown > .navbar__description
