fix dropdown profile

--- a/markup/components/navbar/navbar.styl
+++ b/markup/components/navbar/navbar.styl
@@ -21,9 +21,9 @@
               padding: 0
               height: auto
 
-              &:hover
-                opacity: .75
-                background-color: transparent
+        a.navbar__link:hover
+            background-color: transparent
+            opacity: .75
 
         & ^[0]__heading
             color: #fff
