--- a/markup/components/photo-tape/photo-tape.styl
+++ b/markup/components/photo-tape/photo-tape.styl
@@ -34,6 +34,10 @@ photoTapeItemWidthMobile = 60px
             & ^[0]__photo
                 opacity: .5
 
+            & ^[0]__badge
+                width: 100%
+                height: 100%
+
     &__photo
         width: 100%
         height: auto
@@ -51,6 +55,8 @@ photoTapeItemWidthMobile = 60px
         width: 24px
         height: 24px
         background-color: mainColor
+        will-change: width, height;
+        transition(width, height)
 
         +below(768px)
             top: photoTapeItemWidthMobile
