--- a/markup/components/header/header.styl
+++ b/markup/components/header/header.styl
@@ -6,6 +6,9 @@
     z-index: 200
     background-color: bgColor
 
+    &__filter-icon
+        fill: darkGreyColor
+
     .show-fixed
         display: none
 
@@ -26,7 +29,7 @@
         left: 0
         transform: translate3d(0, 0, 0)
 
-        &:not(.no-shadow)
+        &:not(.no-shadow123)
             box-shadow: 0 10px 40px rgba(29, 29, 29, .1)
 
         & ^[0]__user-nav
