--- a/markup/components/photo-tape/photo-tape.styl
+++ b/markup/components/photo-tape/photo-tape.styl
@@ -94,3 +94,6 @@ photoTapeItemWidthMobile = 60px
 
         +below(1300px)
             display: none
+
+        .header.fixed &
+            display: none
