--- a/markup/components/selectbox/selectbox.styl
+++ b/markup/components/selectbox/selectbox.styl
@@ -73,7 +73,6 @@
     &__list
         width: 258px
         overflow-y: auto
-        overflow-x: hidden
         flex-shrink: 0
         box-shadow 0 10px 40px rgba(29, 29, 29, .1)
 
@@ -81,7 +80,7 @@
             position: absolute
             top: 100%
             left: 0
-            display: flex
+            display: block
             margin-top: 13px
             width: 258px
             max-height: 240px
@@ -89,8 +88,6 @@
             opacity: 0
             transition(opacity)
             z-index: 100
-            overflow-y: hidden
-            overflow-x: visible
 
             &_has_dropdown
                 width: 516px
@@ -108,7 +105,6 @@
         transition(opacity)
         width: 258px
         overflow-y: auto
-        overflow-x: hidden
         flex-shrink: 0
         box-shadow 0 10px 40px rgba(29, 29, 29, .1)
 
@@ -121,7 +117,7 @@
         display: flex
         align-items: center
         justify-content: space-between
-        padding: 0 20px;
+        padding: 0 20px
         height: 60px
         color: #fff
         line-height: 1.375
