--- a/markup/components/search-bar/search-bar.styl
+++ b/markup/components/search-bar/search-bar.styl
@@ -17,7 +17,7 @@
                 display: none
 
         & > ^[0]__placeholder span
-            display: block
+            display: inline-block
 
     &__input
         flex: 1
@@ -35,6 +35,7 @@
         position: absolute
         top: 50%
         left: 0
+        display: inline-block
         padding-left: 24px
         padding-right: 100px
         font-size: 16px
