--- a/markup/components/select-city-popup/select-city-popup.styl
+++ b/markup/components/select-city-popup/select-city-popup.styl
@@ -33,6 +33,5 @@
             display: flex
 
     .container
-        +below(1024px)
-            padding-left: 31px
-            padding-right: 31px
+        width: auto
+        max-width: 1182px
