--- a/markup/components/footer/footer.styl
+++ b/markup/components/footer/footer.styl
@@ -59,6 +59,9 @@
         display: block
         padding-right: 24px
 
+        .selectbox
+            justify-content: space-between
+
         +below(768px)
             padding-right: 0
 
