--- a/markup/components/selectbox/selectbox.styl
+++ b/markup/components/selectbox/selectbox.styl
@@ -1,6 +1,7 @@
 .selectbox
     position: relative
     display: block
+    cursor: pointer
 
     &_active
         & ^[0]__list-wrapper
@@ -152,7 +153,7 @@
                 opacity 1
 
     &_small
-        display: inline-flex
+        display: flex
         align-items: flex-end
 
         & ^[0]__box
@@ -161,9 +162,8 @@
             border 0
 
         & ^[0]__value
-            font-weight 700
+            font-weight 400
             margin-right: 6px
-            text-transform: lowercase
 
         & ^[0]__arrow
             position: static
