--- a/markup/components/badges/badges.styl
+++ b/markup/components/badges/badges.styl
@@ -30,7 +30,8 @@
         line-height: 24px
         white-space: nowrap
         text-transform: uppercase
-        padding: 0 18px
+        padding: 0 16px
+        letter-spacing: 1px
 
         &_skew
             margin-right: -5px
@@ -44,6 +45,7 @@
             font-weight: 700
             text-transform: uppercase
             background-color: mainColor
+            box-shadow 0 4px 8px 0 rgba(210, 163, 111, .31)
 
         &_verified
             text-transform: uppercase
@@ -57,10 +59,12 @@
             font-size: 13px
             font-weight: 700
             color: mainColor
+            padding: 0 13px
 
         &_info
             background-color: darkGreyColor
             padding: 0 7px
             font-size: 12px
+            letter-spacing: initial
             color: rgba(255, 255, 255, .7)
             margin-right: 0
