--- a/markup/components/model-preview/model-preview.styl
+++ b/markup/components/model-preview/model-preview.styl
@@ -53,7 +53,6 @@
             display: block
             width: 100%
             height: 60px
-            background-color: #fff
             background-image: linear-gradient(transparent, #000)
             opacity: 0
             z-index: 2
@@ -94,8 +93,9 @@
             font-size 23px
             letter-spacing initial
             transition(background-color, color)
+            font-style: italic
 
-            &.active
+            &.active, &:hover
                 background-color: darkGreyColor
                 color: mainColor
 
