--- a/markup/components/arrow-up/arrow-up.styl
+++ b/markup/components/arrow-up/arrow-up.styl
@@ -2,12 +2,12 @@
     width 60px
     height 60px
     border 1px solid mainColor
-    background-color #fff
+    background-color #f7f7f7
     border-radius 50%
     text-align center
     cursor pointer
     pointer-events none
-    opacity 0
+    opacity 2
     z-index 5
     -webkit-tap-highlight-color transparent
 
