--- a/markup/components/model-photos/model-photos.styl
+++ b/markup/components/model-photos/model-photos.styl
@@ -100,3 +100,4 @@
             border-style: solid
             border-width: 9px 0 9px 16px
             border-color: transparent transparent transparent #fff
+            margin-right: 4px
