--- a/markup/components/tour-card/tour-card.styl
+++ b/markup/components/tour-card/tour-card.styl
@@ -8,6 +8,7 @@
 
     &_dark
         background-color: darkGreyColor
+        box-shadow 0 10px 40px rgba(29, 29, 29, .1)
 
         & ^[0]__heading
             color: #fff
