--- a/markup/components/contacts-card/contacts-card.pug
+++ b/markup/components/contacts-card/contacts-card.pug
@@ -36,7 +36,8 @@ mixin contacts-card()
                                         a(href='#').contacts-card__link
                                             != pugHelpers.Icon.call(locals, { iconName: 's-tw', className: 'contacts-card__icon contacts-card__icon_tw', iconWidth: '17', iconHeight: '14' })
                                         a(href='#').contacts-card__link
-                                            != pugHelpers.Icon.call(locals, { iconName: 's-link', className: 'contacts-card__icon contacts-card__icon_link', iconWidth: '16', iconHeight: '16' })
+                                            //!= pugHelpers.Icon.call(locals, { iconName: 's-link', className: 'contacts-card__icon contacts-card__icon_link', iconWidth: '16', iconHeight: '16' })
+                                            include ../../static/img/svg/s-link.svg
                             +short-info.hide-desktop
                                 +short-info-heading website
                                 +short-info-content
