--- a/markup/components/heading/heading.styl
+++ b/markup/components/heading/heading.styl
@@ -1,7 +1,7 @@
 .heading
     font-family fontSecond
     font-size 33px
-    letter-spacing initial
+    letter-spacing 0
     font-weight: 400
 
     +below(768px)
@@ -20,7 +20,7 @@
         color darkGreyColor
         font-family fontMain
         font-size 20px
-        letter-spacing: 1px
+        letter-spacing: 0
 
         +below(768px)
             font-size: 18px
