--- a/markup/components/popup/popup.styl
+++ b/markup/components/popup/popup.styl
@@ -3,13 +3,15 @@
     position: fixed
     top: 0
     left: 0
-    transform: translate3d(0, 0, 0)
     width: 100%
     height: 100vh
     background-color: rgba(darkGreyColor, .8)
     z-index: 500
     overflow-y: auto
     overflow-x: hidden
+
+    &:not(.popup_no_transform)
+        transform: translate3d(0, 0, 0)
 
     &.popup_no_mobile_paddings
         +below(768px)
