--- a/markup/components/profile-popup/profile-popup.pug
+++ b/markup/components/profile-popup/profile-popup.pug
@@ -15,7 +15,7 @@ include ../heading/heading
 include ../user-profile/user-profile
 
 mixin profile-popup()
-    +popup.popup_start.popup_no_mobile_paddings#profile-popup
+    +popup.popup_start.popup_no_mobile_paddings.popup_no_transform#profile-popup
         +b.profile-popup
             +popup-close.popup__close_kind_square.popup__close_no_translate
             +e.button._prev
