--- a/markup/components/short-info/short-info.styl
+++ b/markup/components/short-info/short-info.styl
@@ -7,6 +7,7 @@
         font-weight 400
         text-transform uppercase
         color: #878889
+        letter-spacing: 1px
 
         &_md
             font-size: 16px
