fix agency card

--- a/markup/components/agency-card/agency-card.styl
+++ b/markup/components/agency-card/agency-card.styl
@@ -3,6 +3,7 @@
     background-color: #fff
     padding: 0 40px
     overflow: hidden
+    box-shadow 0 20px 50px 0 rgba(29, 29, 29, .02)
 
     .short-info
         margin-top: 2px
@@ -192,7 +193,7 @@
         display: flex
         width: 100%
 
-        &:not(:last-child)
+        &:not(:last-of-type)
             border-bottom: 1px solid borderColor
 
             +below(768px)
