--- a/markup/components/dotted-dropdown/dotted-dropdown.styl
+++ b/markup/components/dotted-dropdown/dotted-dropdown.styl
@@ -14,11 +14,8 @@
             background-color: mainColor
             border-color: transparent
 
-        & ^[0]__icon_dots
-            opacity: 0
-
-        & ^[0]__icon_close
-            opacity: 1
+        & ^[0]__icon
+            fill: #fff
 
     &__button
         position: relative
@@ -47,11 +44,6 @@
 
         &_dots
             fill: darkGreyColor
-            opacity: 1
-
-        &_close
-            fill: #fff
-            opacity: 0
 
     &__content
         position: absolute
@@ -79,10 +71,4 @@
             & ^[0]__button
                 background-color: transparent
                 border-color: transparent
-
-            & ^[0]__icon_dots
-                opacity: 1
-
-            & ^[0]__icon_close
-                opacity: 0
 
