--- a/markup/components/share/share.pug
+++ b/markup/components/share/share.pug
@@ -5,17 +5,17 @@ include ../list/list
 mixin share-button(kind)
     case kind
         when 'vk'
-            +icon-button('s-vk', 21, 12, 'share__icon_vk')(href='#').A.__button
+            +icon-button('s-vk', null, null, 'share__icon_vk')(href='#').A.__button
         when 'fb'
-            +icon-button('s-fb', 9, 19, 'share__icon_fb')(href='#').A.__button
+            +icon-button('s-fb', null, null, 'share__icon_fb')(href='#').A.__button
         when 'tw'
-            +icon-button('s-tw', 19, 15, 'share__icon_tw')(href='#').A.__button
+            +icon-button('s-tw', null, null, 'share__icon_tw')(href='#').A.__button
         when 'ok'
-            +icon-button('s-ok', 12, 19, 'share__icon_ok')(href='#').A.__button
+            +icon-button('s-ok', null, null, 'share__icon_ok')(href='#').A.__button
         when 'email'
-            +icon-button('s-email', 21, 20, 'share__icon_email')(href='#').A.__button
+            +icon-button('s-email', null, null, 'share__icon_email')(href='#').A.__button
         when 'g+'
-            +icon-button('s-g-plus', 26, 17, 'share__icon_gp')(href='#').A.__button
+            +icon-button('s-g-plus', null, null, 'share__icon_gp')(href='#').A.__button
         when 'dots'
             +dotted-dropdown.__button
                 +list
