--- a/markup/components/share/share.styl
+++ b/markup/components/share/share.styl
@@ -34,6 +34,7 @@
         height: 60px
         margin-left: -1px
         margin-top: -1px
+        padding: 0
 
         &_dots
             margin-left: initial
@@ -41,3 +42,6 @@
     .dotted-dropdown
         &__button
             background-color: transparent
+
+            &:hover
+                background-color: mainColor
