--- a/markup/components/user-profile/user-profile.pug
+++ b/markup/components/user-profile/user-profile.pug
@@ -46,9 +46,9 @@ mixin user-profile(isPopup)
                         +e.row._agencies._mob_padding
                             +heading Agencies
                             +agency-card-new
-                        +e.row._mob_padding
+                        +e.row._mob_padding._share
                             +share
-                        +e.row._mob_padding
+                        +e.row._mob_padding._acts
                             +grid
                                 +col(4)
                                     +button()(data-popup-id='#profile-report' data-action='show')._uppercase._border_standart.js-toggle-popup Report
