--- a/markup/components/user-profile/user-profile.pug
+++ b/markup/components/user-profile/user-profile.pug
@@ -57,7 +57,8 @@ mixin user-profile(isPopup)
                                 +col(4)
                                     +button()(href='#')._uppercase._border_standart Save as PDF
                     +e.sidebar
-                        +profile-card I'm working now!
+                        +e.profile-card
+                            +profile-card I'm working now!
                         +e.short-info
                             +short-info
                                 +short-info-heading Profile ID
