--- a/markup/components/select-city-popup/select-city-popup.styl
+++ b/markup/components/select-city-popup/select-city-popup.styl
@@ -10,6 +10,8 @@
     align-self: flex-start
     width: 100%
     background-color: darkGreyColor
+    padding-top: 20px
+    padding-bottom: 20px
 
     &__select
         display: none
