--- a/markup/components/filter/filter.styl
+++ b/markup/components/filter/filter.styl
@@ -137,7 +137,7 @@
     display: none
     box-shadow 0 10px 40px rgba(29, 29, 29, .1)
     background-color darkGreyColor
-    padding: 15px 0
+    padding: 15px 0 60px
 
     .field
         margin-top: 0
