--- a/markup/components/agency/agency.pug
+++ b/markup/components/agency/agency.pug
@@ -51,17 +51,17 @@ mixin agency()
                         +short-info
                             +short-info-heading Phone
                             +short-info-content
-                                +short-info-text +44 3069—990852
+                                +short-info-text.A(href='tel://443069990852') +44 3069—990852
                     +e.col._site
                         +short-info
                             +short-info-heading Website
                             +short-info-content
-                                +short-info-text Visit Website
+                                +short-info-text.A(href='#') Visit Website
                     +e.col._email
                         +short-info
                             +short-info-heading Email
                             +short-info-content
-                                +short-info-text Send Email
+                                +short-info-text.A(href='mailto://example@domain.com') Send Email
                     +e.col._modified
                         span Modified: 15/01/2017
                         span Last Seen: 23/01/2017
