--- a/markup/components/agency/agency.styl
+++ b/markup/components/agency/agency.styl
@@ -6,6 +6,7 @@
         margin-top: 52px
         background-color: #fff
         box-shadow: 0 20px 50px rgba(29, 29, 29, .02)
+        overflow hidden
 
         +below(768px)
             margin-top: 24px
@@ -205,3 +206,4 @@
     &__plus-icon
         margin-left: 8px
         transition(transform)
+        fill: mainColor
