--- a/markup/pages/agency.pug
+++ b/markup/pages/agency.pug
@@ -6,6 +6,7 @@ include ../components/arrow-up/arrow-up
 include ../components/filter/filter
 include ../components/popup-welcome/popup-welcome
 include ../components/select-city-popup/select-city-popup
+include ../components/model-map/model-map
 
 block header
     +header
@@ -16,11 +17,12 @@ block content
 
 block popups
     +popup-welcome
-    +filter-extended
+    +model-map
     +select-city-popup
+    +filter-extended
 
 block scripts
-    script(src='%=static=%js/separate-js/ajax/model-list-load.js')
+    script(src=`%=static=%js/separate-js/maps/model-agencies.js`)
 
 block footer
     +footer
