--- a/markup/components/map/map.styl
+++ b/markup/components/map/map.styl
@@ -84,17 +84,15 @@
                 display: block
 
     .scroll-wrapper
-        padding-top: 90px !important
-
-        +below(540px)
-            padding-bottom: 30px
+        padding-top: 0px !important
+        padding-bottom: 24px
 
     &__content
         width: 258px
         position: absolute
         top: 0
         left: 30px
-        z-index: 1
+        z-index: 111
         max-height: 100%
 
         &.scroll-wrapper
@@ -108,8 +106,11 @@
         .model-preview
             background-color: #fff
 
-        & > *:not(:last-child)
+        & > *
             margin-bottom: 12px
+
+            &:last-child
+                margin-bottom: 24px
 
     &__text
         color #fff
