--- a/markup/components/model-list/model-list-no-models.pug
+++ b/markup/components/model-list/model-list-no-models.pug
@@ -39,32 +39,32 @@ mixin model-list()
             +heading You may be interested in
 
             +grid-masonry({ desktop: 4, laptop: 3, tablet: 2, mobile: 1}).js-model-preview-grid
-                +model-preview([7, 7, 7], 'Sonya', 20, 325, true)
+                +model-preview([7, 7, 7], 'Sonya', 20, 325, true).js-masonry-item
                     +badges._top
                         +badges-item._new._skew
                             span New
                         +badges-item._info
                             span 1 hour ago
-                +model-preview([5, 5, 5, 5], 'Megan', 22, 390)
+                +model-preview([5, 5, 5, 5], 'Megan', 22, 390).js-masonry-item
                     +badges._top
                         +badges-item._vip._skew
                             span Vip
                     +badges._bottom
                         +badges-item._verified._skew
                             span Verified
-                +model-preview([8, 8, 8, 8], 'Valeria', 26, 420)
+                +model-preview([8, 8, 8, 8], 'Valeria', 26, 420).js-masonry-item
                     +badges._top
                         +badges-item._vip._skew
                             span Vip
-                +model-preview([9, 9, 9, 9, 9, 9, 9], 'Sonya', 20, 325)
+                +model-preview([9, 9, 9, 9, 9, 9, 9], 'Sonya', 20, 325).js-masonry-item
                     +badges._bottom._skew
                         +badges-item._verified._skew
                             span Verified
-                +model-preview([2, 2, 2], 'Christine', 27, 370, true)
+                +model-preview([2, 2, 2], 'Christine', 27, 370, true).js-masonry-item
                     +badges._top
                         +badges-item._vip._skew
                             span Vip
-                +model-preview([6, 6, 6, 6], 'Anita', 24, 350)
+                +model-preview([6, 6, 6, 6], 'Anita', 24, 350).js-masonry-item
                     +badges._top
                         +badges-item._new._skew
                             span New
@@ -72,8 +72,8 @@ mixin model-list()
                             span 1 hour ago
                         +badges-item._vip._skew
                             span Vip
-                +model-preview([1, 1, 1, 1, 1, 1], 'Kate', 25, 380)
+                +model-preview([1, 1, 1, 1, 1, 1], 'Kate', 25, 380).js-masonry-item
                     +badges._top
                         +badges-item._vip._skew
                             span Vip
-                +model-preview([10, 10], 'Anna', 22, 390)
+                +model-preview([10, 10], 'Anna', 22, 390).js-masonry-item
