--- a/markup/components/model-preview/model-preview.styl
+++ b/markup/components/model-preview/model-preview.styl
@@ -4,6 +4,12 @@
     box-shdow: 0 0 0 0 rgba(0, 0, 0, 0)
     transition(box-shadow)
 
+    &:first-of-type {
+        .map__content & {
+            margin-top: 95px
+        }
+    }
+
     &_masonry
         margin-left: auto
         margin-right: auto
