--- a/markup/components/dotted-dropdown/dotted-dropdown.styl
+++ b/markup/components/dotted-dropdown/dotted-dropdown.styl
@@ -62,7 +62,7 @@
                 border-color: transparent
 
                 & ^[0]__icon_dots
-                    fill: darkGreyColor
+                    fill: mainColor
 
         &.active
             & ^[0]__content
@@ -72,3 +72,5 @@
                 background-color: transparent
                 border-color: transparent
 
+                & ^[0]__icon_dots
+                    fill: mainColor
