--- a/markup/components/user-nav/user-nav.pug
+++ b/markup/components/user-nav/user-nav.pug
@@ -1,32 +1,36 @@
 mixin user-nav-model(activeItem)
-    +b.UL.user-nav&attributes(attributes)
-        +e.LI.item(class=activeItem === 1 ? 'active' : '')
-            +e.A(href='#').link My profile
-        +e.LI.item(class=activeItem === 2 ? 'active' : '')
-            +e.A(href='#').link Settings
-        +e.LI.item(class=activeItem === 3 ? 'active' : '')
-            +e.A(href='#').link Messages
-            +e.SPAN.badge 1
-        +e.LI.item(class=activeItem === 4 ? 'active' : '')
-            +e.A(href='#').link Visitors
-        +e.LI.item(class=activeItem === 5 ? 'active' : '')
-            +e.A(href='#').link Feeds
-        +e.LI.item(class=activeItem === 6 ? 'active' : '')
-            +e.A(href='#').link Invite Friends
+    +b.user-nav
+        +container
+            +e.UL.items&attributes(attributes)
+                +e.LI.item(class=activeItem === 1 ? 'active' : '')
+                    +e.A(href='#').link My profile
+                +e.LI.item(class=activeItem === 2 ? 'active' : '')
+                    +e.A(href='#').link Settings
+                +e.LI.item(class=activeItem === 3 ? 'active' : '')
+                    +e.A(href='#').link Messages
+                    +e.SPAN.badge 1
+                +e.LI.item(class=activeItem === 4 ? 'active' : '')
+                    +e.A(href='#').link Visitors
+                +e.LI.item(class=activeItem === 5 ? 'active' : '')
+                    +e.A(href='#').link Feeds
+                +e.LI.item(class=activeItem === 6 ? 'active' : '')
+                    +e.A(href='#').link Invite Friends
 
 mixin user-nav-user(activeItem)
-    +b.UL.user-nav&attributes(attributes)
-        +e.LI.item(class=activeItem === 1 ? 'active' : '')
-            +e.A(href='#').link following
-        +e.LI.item(class=activeItem === 2 ? 'active' : '')
-            +e.A(href='#').link My activity
-        +e.LI.item(class=activeItem === 3 ? 'active' : '')
-            +e.A(href='#').link Messages
-            +e.SPAN.badge 1
-        +e.LI.item(class=activeItem === 4 ? 'active' : '')
-            +e.A(href='#').link Feeds
-            +e.SPAN.badge 1
-        +e.LI.item(class=activeItem === 5 ? 'active' : '')
-            +e.A(href='#').link Settings
-        +e.LI.item(class=activeItem === 6 ? 'active' : '')
-            +e.A(href='#').link Invite Friends
+    +b.user-nav
+        +container
+            +e.UL.items&attributes(attributes)
+                +e.LI.item(class=activeItem === 1 ? 'active' : '')
+                    +e.A(href='#').link following
+                +e.LI.item(class=activeItem === 2 ? 'active' : '')
+                    +e.A(href='#').link My activity
+                +e.LI.item(class=activeItem === 3 ? 'active' : '')
+                    +e.A(href='#').link Messages
+                    +e.SPAN.badge 1
+                +e.LI.item(class=activeItem === 4 ? 'active' : '')
+                    +e.A(href='#').link Feeds
+                    +e.SPAN.badge 1
+                +e.LI.item(class=activeItem === 5 ? 'active' : '')
+                    +e.A(href='#').link Settings
+                +e.LI.item(class=activeItem === 6 ? 'active' : '')
+                    +e.A(href='#').link Invite Friends
