--- a/markup/components/user-messages/user-messages.styl
+++ b/markup/components/user-messages/user-messages.styl
@@ -41,7 +41,7 @@
 
     &__content
         display: flex
-        height: 486px
+        height: 100%
         border 1px solid borderColor
 
         +below(900px)
