--- a/markup/components/arrow-up/arrow-up.styl
+++ b/markup/components/arrow-up/arrow-up.styl
@@ -6,8 +6,8 @@
     border-radius 50%
     text-align center
     cursor pointer
+    opacity: 0
     pointer-events none
-    opacity 2
     z-index 5
     -webkit-tap-highlight-color transparent
 
