--- a/markup/components/agency-list/agency-list.pug
+++ b/markup/components/agency-list/agency-list.pug
@@ -14,6 +14,6 @@ mixin agency-list()
             +grid
                 - for (var i = 0; i < 6; i++)
                     +col(6)
-                        +agency-card-new
+                        +agency-card-new(i+1+'.png', i+1+'.jpg')
 
             +side-border-btn('button').__load Load more
