--- a/markup/components/profile-common-popup/profile-common-popup.styl
+++ b/markup/components/profile-common-popup/profile-common-popup.styl
@@ -123,6 +123,9 @@
             text-decoration: none
             color: darkGreyColor
 
+            .heading
+                font-family: fontMain
+
             +below(768px)
                 margin-top: 40px
                 margin-bottom: 40px
